src/snapshots/afrotd__parser__tests__rule_2.8.3.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 8
  - 3
title: Ungültiges Signal
text: "Ein ungültiges Signal ist ein Winkzeichen irgendeines Team B-Spielers:\n\ta) das nicht den Anforderungen der Regel 2.8.2 entspricht;\n\tb) inklusive eines „T –Signals“, welches während eines Scrimmage Kicks oder eines Free Kicks gegeben wird (A.R. 6.5.3.VII); oder\n\tc) das gegeben wird, nachdem ein Scrimmage Kick jenseits der neutralen Zone gefangen wurde oder den Boden oder einen anderen Spieler jenseits der neutralen Zone berührt hat (A.R. 6.5.3.III bis 6.5.3.V) oder\n\td) das gegeben wird, nachdem ein Free Kick gefangen wurde oder den Boden oder einen anderen Spieler berührt hat (Ausnahme: Regel 6.4.1.f)."
interpretations: []
