src/snapshots/afrotd__parser__tests__rule_2.9.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 9
  - 1
title: "Vorwärts, jenseits, nach vorne"
text: "Vorwärts, jenseits und nach vorne bezeichnen, bezogen auf das jeweilige Team, die Richtung zur gegnerischen Endlinie. Rückwärts und hinter sind gegenteilige Begriffe."
interpretations: []
