src/snapshots/afrotd__parser__tests__rule_2.9.2.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 9
  - 2
title: Forward Progress
text: "Forward Progress ist der Begriff, mit dem das Ende der Bewegung (Advancen) des Ballträgers oder eines in der Luft befindlichen Pass-Receivers eines Teams bezeichnet wird und bezieht sich auf die Position des Balles, wenn dieser der Regel nach dead wird (Regeln 4.1.3.a, 4.1.3.b, 4.1.3.p, 4.2.1, 4.2.4 und 5.1.3.a Ausnahme) (A.R. 5.1.3.I bis 5.1.3.VI und A.R. 8.2.1.I bis 8.2.1.IX) (Ausnahme: Regel 8.5.1.a, A.R. 8.5.1.I)."
interpretations: []
