src/snapshots/afrotd__parser__tests__rule_3.1.3.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 3
  - 1
  - 3
title: Extraperioden
text: "Soweit der jeweilige Ligaträger keine abweichenden Regelungen beschließt, wird bei Punktgleichheit nach der regulären Spielzeit eines Pflichtspiels dieses Spiel verlängert und der Sieger in Extraperioden ermittelt. Dabei gelten die American Football Regeln & Interpretationen mit folgenden Ausnahmen:\n\ta) Unmittelbar nach dem Ende der vierten Periode informieren die Schiedsrichter beide Teams, dass sie in ihre jeweiligen Teamzonen zurückkehren sollen. Die Schiedsrichter versammeln sich an der 50-Meterlinie und besprechen das Ausscheidungsverfahren.\n\tb) Die Schiedsrichter sollen die Team Captains zur Spielfeldmitte zum Coin Toss begleiten (Regel 3.1.1). Der Referee muss in der Spielfeldmitte, in Anwesenheit mindestens eines anderen Schiedsrichters und nicht mehr als vier Team Captains jedes Teams, eine Münze werfen (Coin Toss), wobei er vor dem Wurf der Münze den Team Captain des Gastteams anweist, seine Wahl zu treffen. Der Gewinner des Coin Toss darf seine Wahl nicht verschieben und muss sich für eine der folgenden Möglichkeiten entscheiden:\n\t\t1. Offense oder Defense, wobei die Offense an der gegnerischen 25-Meterlinie ihre erste Ballbesitz-Serie beginnt;\n\t\t2. an welchem Ende des Feldes diese beiden Ballbesitz-Serien in dieser Extraperiode gespielt werden müssen.\n\tc) Der Verlierer des Coin Toss muss aus der verbleibenden Möglichkeit für die erste Extraperiode wählen und hat die erste Wahl aus den beiden Möglichkeiten für die nachfolgenden Extraperioden mit einer geraden Nummer.\n\td) Definition: Eine Extraperiode muss zwei Ballbesitz-Serien enthalten, wobei jedes Team jeweils den Ball durch einen Snap auf oder zwischen den Hash Marks an der vorher festgelegten 25-Meterlinie (sofern diese nicht durch eine Strafe verschoben wurde), die dann die gegnerische 25-Meterlinie ist, ins Spiel bringt. Der Snap soll von dem ungefähren Mittelpunkt auf der 25-Meterlinie zwischen den Hash Marks durchgeführt werden, es sei denn, das Offense Team wählt vor der Ballfreigabe eine andere Position auf oder zwischen den Hash Marks. Nach der Ballfreigabe darf der Ball nur nach einem Team-Timeout an einen anderen Punkt gelegt werden, es sei denn, dem Timeout gingen ein Team A-Foul oder sich aufhebende Fouls voraus.\n\te) Ballbesitz-Serie: Jedes Team behält während einer Ballbesitz-Serie den Ball solange, bis es punktet oder versäumt, einen First Down zu erzielen. Der Ball bleibt nach einem Team Ballbesitzwechsel live, bis er für dead erklärt wird. Team A hat jedoch keinen First Down und 10, wenn es nach einem Team Ballbesitzwechsel wieder in Ballbesitz kommt (A.R. 3.1.3.I bis 3.1.3.IX). Beginnend mit der dritten Extraperiode besteht die Ballbesitz-Serie eines Teams aus einem Down von der gegnerischen 3-Meterlinie, um einen Zwei-Punkte-Touchdown zu erzielen. Der Snap kann von einem Punkt auf oder innerhalb der Hash Marks von der gegnerischen 3-Meterlinie durchgeführt werden, ausgenommen dieser Punkt wird durch die Annahme einer Strafe verschoben. Die Bezeichnungen für Team A und B sind dieselben, wie sie in Regel 2.27.1 definiert sind.\n\tf) Punkterzielung: Das Team, das während der regulären Spielzeit und den Extraperioden die größere Anzahl an Punkten erzielt, wird zum Gewinner erklärt. In jeder Extraperiode muss es, wie in e) beschrieben, eine gleiche Anzahl von Ballbesitz-Serien geben, ausgenommen Team B punktet während eines Downs in einer Extraperiode, der kein Try ist. Beginnend mit der zweiten Extraperiode muss ein Team, das einen Sechs-Punkte-Touchdown erzielt hat, einen Zwei-Punkte-Try unternehmen. Ein Ein-Punkt-Try-Versuch durch Team A (obwohl nicht illegal) wird nicht gewertet (A.R. 3.1.3.X).\n\tg) Fouls nach Team Ballbesitzwechsel (A.R. 3.1.3.XI bis 3.1.3.XIII)\n\t\t1. Während der Extraperioden werden Strafen gegen eines oder beide Teams durch die Regel aufgehoben (Ausnahme: Strafen für schwere persönliche Fouls, unsportliche Verhalten Fouls, persönliche Dead Ball Fouls und Live Ball Fouls, die wie Dead Ball Fouls behandelt werden, werden vor dem anschließenden Down geahndet).\n\t\t2. Die Punkte von einem Team, das während des Downs ein Foul begeht, werden annulliert (Ausnahme: Live Ball Foul, welches als Dead Ball Foul behandelt wird.).\n\t\t3. Foulen beide Teams während des Downs und hatte Team B vor dem Team Ballbesitzwechsel nicht gefoult, heben sich die Fouls auf und der Down wird nicht wiederholt. (Ausnahme: Strafen für schwere persönliche Fouls, unsportliche Verhalten-Fouls, persönliche Dead Ball Fouls und Live Ball Fouls, die als Dead Ball Fouls behandelt werden, werden vor dem anschließenden Down geahndet.)\n\th) Timeouts: Jedem Team wird ein Timeout für die erste Extraperiode und ein Timeout für die zweite Extraperiode zugestanden. Jedem Team wird ein Timeout, beginnend mit der dritten Extraperiode, bis das Spiel beendet ist, zugestanden (Regel 3.3.8). Timeouts, die während der regulären Spielzeit nicht genutzt wurden, können nicht mit in die nachfolgende(n) Extraperiode(n) übernommen werden. Unbenutzte Extraperiode(n)Timeouts können nicht in andere Extraperioden übertragen werden. Timeouts, die zwischen den Extraperioden genommen werden, werden in der nachfolgenden Extraperiode angerechnet. Radio- und TVTimeouts sind nur zwischen den Perioden (erste und zweite, zweite und dritte etc.) erlaubt. Geforderte Team-Timeouts dürfen nicht für Radiooder TV-Belange verlängert werden. Die Extraperiode(n) beginnt (beginnen), wenn der Ball zum ersten Mal gesnappt wird. Gibt es kein TVoder Radio-Timeout nach der zweiten und vierten Extraperiode, wird eine zweiminütige Unterbrechung vorgeschrieben."
interpretations: []
