src/snapshots/afrotd__parser__tests__rule_3.2.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 3
  - 2
  - 1
title: Länge der Perioden und der Pausen
text: "Die reine Spielzeit in einem Spiel beträgt 48 Minuten, geteilt in vier Perioden zu je 12 Minuten (Ausnahme: Jugendspiele siehe BSO, 2. Damenbundesliga siehe ligeninterne Regelung). Zwischen der ersten und zweiten Periode (erste Halbzeit) und der dritten und vierten Periode (zweite Halbzeit) soll eine Pause von einer Minute liegen. (Ausnahme: Diese 1-Minuten-Pausen können für Radio- und TV-Timeouts verlängert werden.)\n\ta) Keine Periode darf beendet werden, bevor der Ball dead ist und der Referee die Periode für beendet erklärt hat [S14].\n\tb) Die Pause zwischen den Halbzeiten eines regulären Saisonspieles soll 15 Minuten dauern. Die Pause kann in gemeinsamen Einverständnis der Managements beider Teams verkürzt werden. Unmittelbar nach dem Ende der zweiten Spielperiode soll der Referee anzeigen, dass die Halbzeitpause beginnt [S2].\n\tc) Am Ende der ersten Halbzeit, nachdem die Teams das Feld verlassen haben und der Referee (a) den letzten Down mit der SchiedsrichterCrew abgestimmt und (b) festgestellt hat, dass es keine Einwände eines Head Coaches gibt, kann er die Halbzeit für beendet erklären. Nachdem der Referee die erste Halbzeit für beendet erklärt hat, werden keine zusätzlichen Einwände von dem vorherigen Down zugelassen.\n\td) Das Heimteammanagement bestimmt den Zeitpunkt der Halbzeitaktivitäten. Das Spielfeld steht den Spielteilnehmern spätestens drei Minuten vor Anpfiff der zweiten Halbzeit zur Verfügung. Wenn ein Spielteilnehmer während der Halbzeitpause den Platz betritt, muss ein Verantwortlicher dieser Mannschaft auf dem Platz ebenfalls anwesend sein. Wenn Kicker oder andere Spielteilnehmer den Platz betreten, bevor das Spielfeld verfügbar ist, müssen ihre Aktivitäten auf die eigene Teamzone beschränkt werden. Alle Spielteilnehmer müssen die geplanten Halbzeitaktivitäten respektieren und alle Kicks müssen in die Kick-Netze erfolgen, bis das Spielfeld wieder verfügbar ist."
interpretations: []
