src/snapshots/afrotd__parser__tests__rule_3.2.3.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 3
  - 2
  - 3
title: Verlängerung der Perioden
text: "\ta) Eine Periode muss um einen Down ohne Zeit verlängert werden, wenn während eines Downs in der zweiten oder vierten Spielperiode, in dem die Spielzeit ausläuft, sich eine oder mehrere der nachfolgenden Umstände ereignen (A.R. 3.2.3.I bis 3.2.3.VIII):\n\t\t1. Eine Strafe für ein oder mehrere Live Ball Fouls wird angenommen (Ausnahme: Regel 10.2.5.a und Regel 10.2.5.d, wenn die Punkte für das Fieldgoal akzeptiert werden). Je nach Wahl des gefoulten Teams wird die Periode nicht verlängert, wenn das Foul durch das ballbesitzende Team verursacht wird und die Strafandrohung einen Downverlust enthält (A.R. 3.2.3.VIII).\n\t\t2. Es ereignen sich Fouls, die sich aufheben.\n\t\t3. Ein Schiedsrichter pfeift versehentlich ab oder erklärt durch ein irrtümliches Signal den Ball dead.\n\tb) Es müssen zusätzliche Downs ohne Zeit gespielt werden, bis ein Down ohne die in Regel 3.2.3.a.1 bis 3.2.3.a.3 aufgeführten Umstände gespielt wurde.\n\tc) Ereignet sich ein Touchdown während eines Downs, in dem die Spielzeit ausläuft, wird die Periode für den Try verlängert."
interpretations: []
