src/snapshots/afrotd__parser__tests__rule_3.2.4.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 3
  - 2
  - 4
title: Zeitnahme-Vorrichtungen
text: "\ta) Game Clock Die Spielzeit muss mit einer Uhr gemessen werden, die eine Stoppuhr sein kann und vom zuständigen Schiedsrichter bedient wird, es sei denn, es ist eine sichtbare Game Clock vorhanden, die von einem Assistenten unter Aufsicht des zuständigen Schiedsrichters bedient wird. Die Art der Game Clock und der Aufenthaltsort des Game Clock Bedieners wird durch das Heimteammanagement bestimmt. Der Game Clock Bediener kann sich an der Seitenlinie oder in einer üblichen Press Box befinden. Wenn sich der Game Clock Bediener in einer Press Box befindet, wird vorgeschrieben, dass sich diese Örtlichkeit zwischen den Goallines befinden muss. Dieser Standort muss vor öffentlichen Störungen geschützt sein und eine direkte und ungehinderte Sicht auf das Spielfeld ermöglichen. Die Game Clock soll keine Sekundenbruchteile anzeigen.\n\tb) 40-Sekunden Play Clock\n\t\t1. Wenn ein Schiedsrichter anzeigt, dass der Ball dead ist [S1], startet die Play Clock den 40-Sekunden-Countdown.\n\t\t2. Wenn der 40-Sekunden-Countdown nicht startet oder durch Umstände unterbrochen wird, die außerhalb der Kontrolle der Schiedsrichter oder des Bedieners der Play Clock liegen (z. B.: Fehlfunktionen), muss der Referee die Game Clock anhalten und anzeigen (Pumpbewegung mit beiden geöffneten Handflächen über dem Kopf), dass die Play Clock auf 40 Sekunden zurückgestellt und sofort neu gestartet wird.\n\t\t3. In dem Fall, dass der 40-Sekunden-Countdown läuft und der Ball bei verbleibenden 25 Sekunden nicht spielbereit ist, muss der Referee ein Timeout anzeigen und die Play Clock wird auf 25 Sekunden gesetzt. Wird danach das Spiel aufgenommen, gibt der Referee den Ball frei [S1] und die Play Clock beginnt den 25-Sekunden-Countdown. Die Game Clock startet mit dem Snap, es sei denn, sie lief, als der Referee das Timeout anzeigte; in diesem Fall startet die Game Clock mit der Ballfreigabe des Referees (Regel 3.3.2.f)(A.R. 3.2.4.I und 3.2.4.II).\n\tc) 25-Sekunden Play Clock Wenn ein Schiedsrichter anzeigt, dass die Game Clock aus den nachfolgenden Gründen angehalten wurde, zeigt der Referee (Pumpbewegung mit einer geöffneten Handfläche über dem Kopf) an, dass die Play Clock auf 25 Sekunden gesetzt werden soll:\n\t\t1. Strafdurchführung\n\t\t2. Team-Timeout\n\t\t3. Zwei-Minuten-Timeout\n\t\t4. Medien-Timeout\n\t\t5. Verletzungs-Timeout nur für einen Team A-Spieler. Die Play Clock wird für ein Verletzungs-Timeout eines Team B-Spielers auf 40 Sekunden gesetzt, außer nach einem Team-Timeout oder wenn die Game Clock für das Zwei-Minuten-Timeout angehalten wurde.\n\t\t6. Nachmessen\n\t\t7. Team B wird ein First Down zuerkannt, außer nach einem Free Kick.\n\t\t8. nach einem Kick-Down außer einem Free Kick\n\t\t9. Punkte außer einem Touchdown (nicht beim Try)\n\t\t10. Beginn jeder Periode\n\t\t11. Start einer Team Serie in Extraperioden\n\t\t12. andere administrative Gründe.\n\t\t13. Ein Offense Spieler verliert durch die Teilnahme am Down seinen Helm vollständig. Die Play Clock wird auf 40 Sekunden gesetzt, wenn ein Defense Spieler seinen Helm durch die Teilnahme am Down vollständig verliert, außer nach einem Team-Timeout oder wenn die Game Clock für das Zwei-Minuten-Timeout angehalten wurde.\n\td) Ausfall einer Play Clock Fällt eine der beiden sichtbaren Play Clocks aus, muss der Referee sofort beide Head Coaches davon unterrichten und beide Uhren abschalten lassen."
interpretations: []
